# vectorflow

cpp/: a.out  model.cpp
cpp-nn-evaluation/: CMakeLists.txt  README.md  REPORT.md
cpp-nn-evaluation/include/nn/: data_utils.h  model.h
cpp-nn-evaluation/src/: data_utils.cpp  main.cpp  model.cpp
cpp-nn-evaluation/tests/: evaluation.cpp
vectorflow-purecpp/: model.cpp
vectorflow-purecpp-1/: Makefile  README.md
vectorflow-purecpp-1/cpp/: model.cpp
vectorflow-purecpp-1/cpp/cuda/: neural_network.cu  neural_network.cuh
vectorflow-purecpp-1/cpp/utils/: cuda_utils.cuh
vectorflow-purecpp-copy/cpp/: Makefile  model.cpp
vectorflow-purecpp/cpp/: Makefile  matrixMul.cu  matrix_utils.cpp  matrix_utils.h  model.cpp
vectorflow-purecpp/gemini/: Makefile  NuralNetwork.h  cuda_kernels.cu  cuda_kernels.h  cuda_utils.h  main.cpp  model.cpp
vectorflow-python/: README.md  setup.py  test.py
vectorflow-python/cpp/: bindings.cpp  matrixMul.cu  matrix_utils.cpp  matrix_utils.h  model.cpp
vectorflow-python/vectorflow/: __init__.py
